syntax = "proto3"; // 版本
option java_outer_classname = "ElectionPOJO";//生成的外部类名，同时也是文件名
// protobuf使用message管理数据
message Election { // 会在ElectionPOJO外部类中生成一个Election内部类
    int32 term =1; // int32对应java中的int型，1表示属性序号，不是值
    int32 type =2; // 消息类型
    int32 index =3; // 消息index
    int32 ElectionId =4; // 选举的轮次
    int32 voteResult =5; // 投票结果，1：通过，0：不通过
    int32 port =6; // 正在连接的客户端的server端口
    string content =7; // 内容
    string projectId = 8;
    bytes indexMapLog = 9;
    bytes msgMapLog = 10;
    map<string, int32> msgMap = 11; // 同步日志用，key为projectId，value为commitedIndex
    map<string, int32> logCopyIndexMap = 12; // key为projectId，value为各projectId日志中需要传输的增量的字节数
    bytes logCopyBytes = 13; // 所有projectId需要传输的增加的字节数组
}